# recipe-scrapers

./: pyproject.toml
recipe_scrapers/: _schemaorg.py  nytimes.py  recipe-scrapers.code-workspace
tests/: test_allrecipes.py
