[tool.poetry]
name = "recipe_scrapers"
version = "0.1.0"
description = ""
authors = ["Jesse Viola <jesse.viola@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = ">=21.4b2"
coverage = ">=4.5.1"
flake8 = ">=3.8.3"
flake8-printf-formatting = ">=1.1.0"
pre-commit = ">=2.6.0"
pytest = ">=6.1.1"
unittest-parallel = ">=1.5.0"
pylint = "^2.13.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
